# videoPath

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wish/videopath/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  RTMP_LOG.h  VideoChannel.cpp  VideoChannel.h  android_log.h  ffmpeg_demo.cpp  native-lib.cpp  x264_codec.cpp
app/src/main/cpp/include/x264/: x264_config.h
app/src/main/cpp/lib/arm64-v8a/: libfaac.la
app/src/main/cpp/lib/armeabi-v7a/: libfaac.la
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/cpp/music/: AudioPlayStatus.cpp  AudioPlayStatus.h  CallJavaHelper.cpp  CallJavaHelper.h  MyFFmpeg.cpp  MyFFmpeg.h  OpenslPlay.cpp  OpenslPlay.h  OpenslQueue.cpp  OpenslQueue.h  ffmpeg_demo.cpp  ffmpeg_opensl.cpp
app/src/main/java/com/wish/videopath/: Demo1Activity.kt  MainActivity.java  MainActivity.kt
app/src/main/java/com/wish/videopath/demo1/: Demo1Activity.kt  MyImageView.kt  MySurfaceView.kt
app/src/main/java/com/wish/videopath/demo10/: FFmpegActivity.java
app/src/main/java/com/wish/videopath/demo11/: FFPlay.java  MusicActivity.java  PlayPrepareListener.java  PlayerListener.java
app/src/main/java/com/wish/videopath/demo2/: Demo2Activity.kt  PCMCovWavUtil.java
app/src/main/java/com/wish/videopath/demo3/: CameraTextureView.java  CameraView.java  Demo3Activity.java
app/src/main/java/com/wish/videopath/demo4/: Demo4Activity.java  ExtractorMuxerThread.java  ExtractorThread.java
app/src/main/res/layout/: activity_camera_xactivity.xml  activity_demo2.xml  activity_demo3.xml  activity_demo4.xml  activity_demo5.xml  activity_demo6.xml  activity_demo7.xml  activity_demo8.xml  activity_demo9.xml  activity_ffmpeg.xml  activity_main.xml  activity_main2.xml  activity_media_codec.xml  activity_music.xml
app/src/main/res/raw/: camera_frag.fsh  camera_vert.vsh  demo5.aac  white_blance_frag.fsh  zlj.aac
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wish/videopath/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/src/main/java/com/wish/lib/: MyClass.java
(+48 files in other folders)
